@@ -52,6 +52,7 @@ gm_pass: gm
 level_new_gm: 60
 
 // Can you make new accounts on the server? (1 for Yes, 0 for no)
+// (1 = _M/_F enabled, 0 = not enabled)
 new_account: 1
 
 // Account flatfile database, stores account information.
@@ -136,6 +137,12 @@ check_ip_flag: yes
 // Add as many IP's as you wish, as long as you put deny: before it.
 //deny: 123.123.123.123
 //deny: 234.234.234.234
+
+//Check The clientversion set in the clientinfo ?
+check_client_version: no
+
+//What version we would allow to connect? (if the options above is enabled..)
+client_version_to_connect: 20
 
 //Passwords in Login DB are MD5 - <passwordencrypt> cannot b used on client with this on
 use_MD5_passwords: no
