@@ -15,6 +15,7 @@
 
 extern int login_port;
 struct mmo_account {
+	int version;	//Added for version check [Sirius]
 	char* userid;
 	char passwd[33];
 	int passwdenc;
